Homework8/force-app/main/default/objects/Log__c/fields/Context_Id__c.field-meta.xml
<CustomField>
    <fullName>Context_Id__c</fullName>
    <label>Context_Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>