Homework8/force-app/main/default/objects/Log__c/fields/Context_Name__c.field-meta.xml
<CustomField>
    <fullName>Context_Name__c</fullName>
    <label>Context_Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>