Homework8/force-app/main/default/objects/Log__c/fields/Logging_lavel__c.field-meta.xml
<CustomField>
    <fullName>Logging_lavel__c</fullName>
    <label>Logging_lavel</label>
    <length>10</length>
    <type>Text</type>
</CustomField>