Homework8/force-app/main/default/objects/Log__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Exception description</description>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>