Homework8/force-app/main/default/objects/Log__c/fields/Stack_trace_String__c.field-meta.xml
<CustomField>
    <fullName>Stack_trace_String__c</fullName>
    <description>Exception Stack trace</description>
    <label>Stack trace String</label>
    <length>50</length>
    <type>Text</type>
</CustomField>