Homework8/force-app/main/default/objects/Log__c/fields/User_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Name__c</fullName>
    <description>User that produced the exception(User context)</description>
    <label>User Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>